fix overflows

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-	width: 100%;
+	width: auto;
 	max-width: 75rem;
 	margin-inline: auto;
 	padding-inline: 1rem;
